--- a/public/impressum/index.html
+++ b/public/impressum/index.html
@@ -27,12 +27,7 @@
     
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Christoph Süßer IT Dienstleistungen">
-  <meta name="twitter:description" content="Impressum Christoph Süßer IT Dienstleistungen
-Siedfeld 15
-25376 Borsfleth
-Kontakt Telefon: &#43;49 (0) 123 44 55 66
-E-Mail: anfrage@csit.services
-Umsatzsteuer-ID Umsatzsteuer-Identifikationsnummer gemäß § 27 a Umsatzsteuergesetz: DE353637037
+  <meta name="twitter:description" content="Impressum Christoph Süßer IT Dienstleistungen Kontakt Umsatzsteuer-ID Umsatzsteuer-Identifikationsnummer gemäß § 27 a Umsatzsteuergesetz:
 EU-Streitschlichtung Die Europäische Kommission stellt eine Plattform zur Online-Streitbeilegung (OS) bereit:
 https://ec.europa.eu/consumers/odr/.
 Unsere E-Mail-Adresse finden Sie oben im Impressum.
@@ -42,12 +37,7 @@ Haftung für Inhalte Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für ei
     <meta property="og:url" content="//localhost:1313/impressum/">
   <meta property="og:site_name" content="Christoph Süßer IT Dienstleistungen">
   <meta property="og:title" content="Christoph Süßer IT Dienstleistungen">
-  <meta property="og:description" content="Impressum Christoph Süßer IT Dienstleistungen
-Siedfeld 15
-25376 Borsfleth
-Kontakt Telefon: &#43;49 (0) 123 44 55 66
-E-Mail: anfrage@csit.services
-Umsatzsteuer-ID Umsatzsteuer-Identifikationsnummer gemäß § 27 a Umsatzsteuergesetz: DE353637037
+  <meta property="og:description" content="Impressum Christoph Süßer IT Dienstleistungen Kontakt Umsatzsteuer-ID Umsatzsteuer-Identifikationsnummer gemäß § 27 a Umsatzsteuergesetz:
 EU-Streitschlichtung Die Europäische Kommission stellt eine Plattform zur Online-Streitbeilegung (OS) bereit:
 https://ec.europa.eu/consumers/odr/.
 Unsere E-Mail-Adresse finden Sie oben im Impressum.
@@ -91,17 +81,13 @@ Haftung für Inhalte Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für ei
 	</header>
 	<section class="wrapper style5">
 		<div class="inner">
-      <h1 id="impressum">Impressum</h1>
-<p>Christoph Süßer IT Dienstleistungen<br>
-Siedfeld 15<br>
-25376 Borsfleth</p>
-<p><img alt="Beispielbild" src="https://example.com/beispielbild.jpg"></p>
+      <h2 id="impressum">Impressum</h2>
+<h2 id="christoph-süßer-it-dienstleistungen">Christoph Süßer IT Dienstleistungen</h2>
 <h2 id="kontakt">Kontakt</h2>
-<p>Telefon: +49 (0) 123 44 55 66<br>
-E-Mail: <a href="mailto:anfrage@csit.services">anfrage@csit.services</a></p>
+<p><img alt="Beispielbild" src="https://example.com/beispielbild.jpg"></p>
 <h2 id="umsatzsteuer-id">Umsatzsteuer-ID</h2>
-<p>Umsatzsteuer-Identifikationsnummer gemäß § 27 a Umsatzsteuergesetz:
-DE353637037</p>
+<p>Umsatzsteuer-Identifikationsnummer gemäß § 27 a Umsatzsteuergesetz:<br>
+<img alt="Beispielbild" src="https://example.com/beispielbild.jpg"></p>
 <h2 id="eu-streitschlichtung">EU-Streitschlichtung</h2>
 <p>Die Europäische Kommission stellt eine Plattform zur Online-Streitbeilegung (OS) bereit:<br>
 <a href="https://ec.europa.eu/consumers/odr/">https://ec.europa.eu/consumers/odr/</a>.<br>
