Fix gitignore and impressum

--- a/public/en/index.html
+++ b/public/en/index.html
@@ -72,7 +72,7 @@
 
 <section id="banner">
 	<div class="inner">
-    <h2>Christoph Süßer <br /><img src="/images/cslogo.png" alt="CS Logo" style="width:25%; margin-top:15px;"> <br />IT Dienstleistungen</h2>
+    <h2>Christoph Süßer <br /><img src="/img/cslogo.png" alt="CS Logo" style="width:25%; margin-top:15px;"> <br />IT Dienstleistungen</h2>
     <p>Lösungen für ausgewählte Kunden.</p>
     
 	</div>
