--- a/public/impressum/index.html
+++ b/public/impressum/index.html
@@ -84,10 +84,10 @@ Haftung für Inhalte Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für ei
       <h2 id="impressum">Impressum</h2>
 <h2 id="christoph-süßer-it-dienstleistungen">Christoph Süßer IT Dienstleistungen</h2>
 <h2 id="kontakt">Kontakt</h2>
-<p><img alt="Beispielbild" src="https://example.com/beispielbild.jpg"></p>
+<p><img alt="Impressum anti-crawler anti-spam" src="/img/impressum.png"></p>
 <h2 id="umsatzsteuer-id">Umsatzsteuer-ID</h2>
 <p>Umsatzsteuer-Identifikationsnummer gemäß § 27 a Umsatzsteuergesetz:<br>
-<img alt="Beispielbild" src="https://example.com/beispielbild.jpg"></p>
+<img alt="UstID anti-crawler anti-spam" src="/img/ustid.png"></p>
 <h2 id="eu-streitschlichtung">EU-Streitschlichtung</h2>
 <p>Die Europäische Kommission stellt eine Plattform zur Online-Streitbeilegung (OS) bereit:<br>
 <a href="https://ec.europa.eu/consumers/odr/">https://ec.europa.eu/consumers/odr/</a>.<br>
@@ -146,7 +146,7 @@ Uhrzeit der Serveranfrage
 
 						</ul>
 						<ul class="copyright">
-              <li>&copy; 2024 Christoph Süßer</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+              <li>&copy; 2024 Christoph Süßer</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li><a href="/impressum">Impressum</a></li>
 						</ul>
 					</footer>
 
