--- a/public/index.html
+++ b/public/index.html
@@ -72,7 +72,7 @@
 
 <section id="banner">
 	<div class="inner">
-    <h2>Christoph Süßer <br /><img src="/images/cslogo.png" alt="CS Logo" style="width:25%; margin-top:15px;"> <br />IT Dienstleistungen</h2>
+    <h2>Christoph Süßer <br /><img src="/img/cslogo.png" alt="CS Logo" style="width:25%; margin-top:15px;"> <br />IT Dienstleistungen</h2>
     <p>Lösungen für ausgewählte Kunden.</p>
     
 	</div>
@@ -179,7 +179,7 @@
 
 						</ul>
 						<ul class="copyright">
-              <li>&copy; 2024 Christoph Süßer</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+              <li>&copy; 2024 Christoph Süßer</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li><a href="/impressum">Impressum</a></li>
 						</ul>
 					</footer>
 
