--- a/public/impressum/index.html
+++ b/public/impressum/index.html
@@ -27,7 +27,13 @@
     
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Christoph Süßer IT Dienstleistungen">
-  <meta name="twitter:description" content="Impressum Christoph Süßer IT Dienstleistungen Kontakt Umsatzsteuer-ID Umsatzsteuer-Identifikationsnummer gemäß § 27 a Umsatzsteuergesetz:
+  <meta name="twitter:description" content="Impressum Christoph Süßer IT Dienstleistungen Kontakt Online-Impressum.de
+Kunde: Christoph Süßer IT Dienstleistungen
+Europaring 90
+53757 Sankt Augustin
+anfrage@csit.services
+Tel: &#43;49 15678755803
+Umsatzsteuer-ID Umsatzsteuer-Identifikationsnummer gemäß § 27 a Umsatzsteuergesetz: DE353637037
 EU-Streitschlichtung Die Europäische Kommission stellt eine Plattform zur Online-Streitbeilegung (OS) bereit:
 https://ec.europa.eu/consumers/odr/.
 Unsere E-Mail-Adresse finden Sie oben im Impressum.
@@ -37,7 +43,13 @@ Haftung für Inhalte Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für ei
     <meta property="og:url" content="//localhost:1313/impressum/">
   <meta property="og:site_name" content="Christoph Süßer IT Dienstleistungen">
   <meta property="og:title" content="Christoph Süßer IT Dienstleistungen">
-  <meta property="og:description" content="Impressum Christoph Süßer IT Dienstleistungen Kontakt Umsatzsteuer-ID Umsatzsteuer-Identifikationsnummer gemäß § 27 a Umsatzsteuergesetz:
+  <meta property="og:description" content="Impressum Christoph Süßer IT Dienstleistungen Kontakt Online-Impressum.de
+Kunde: Christoph Süßer IT Dienstleistungen
+Europaring 90
+53757 Sankt Augustin
+anfrage@csit.services
+Tel: &#43;49 15678755803
+Umsatzsteuer-ID Umsatzsteuer-Identifikationsnummer gemäß § 27 a Umsatzsteuergesetz: DE353637037
 EU-Streitschlichtung Die Europäische Kommission stellt eine Plattform zur Online-Streitbeilegung (OS) bereit:
 https://ec.europa.eu/consumers/odr/.
 Unsere E-Mail-Adresse finden Sie oben im Impressum.
@@ -82,33 +94,37 @@ Haftung für Inhalte Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für ei
 	<section class="wrapper style5">
 		<div class="inner">
       <h2 id="impressum">Impressum</h2>
-<h2 id="christoph-süßer-it-dienstleistungen">Christoph Süßer IT Dienstleistungen</h2>
-<h2 id="kontakt">Kontakt</h2>
-<p><img alt="Impressum anti-crawler anti-spam" src="/img/impressum.png"></p>
-<h2 id="umsatzsteuer-id">Umsatzsteuer-ID</h2>
-<p>Umsatzsteuer-Identifikationsnummer gemäß § 27 a Umsatzsteuergesetz:<br>
-<img alt="UstID anti-crawler anti-spam" src="/img/ustid.png"></p>
-<h2 id="eu-streitschlichtung">EU-Streitschlichtung</h2>
+<h3 id="christoph-süßer-it-dienstleistungen">Christoph Süßer IT Dienstleistungen</h3>
+<h3 id="kontakt">Kontakt</h3>
+<p>Online-Impressum.de<br>
+Kunde: Christoph Süßer IT Dienstleistungen<br>
+Europaring 90<br>
+53757 Sankt Augustin<br>
+<a href="mailto:anfrage@csit.services">anfrage@csit.services</a><br>
+Tel: +49 15678755803</p>
+<h3 id="umsatzsteuer-id">Umsatzsteuer-ID</h3>
+<p>Umsatzsteuer-Identifikationsnummer gemäß § 27 a Umsatzsteuergesetz: DE353637037</p>
+<h3 id="eu-streitschlichtung">EU-Streitschlichtung</h3>
 <p>Die Europäische Kommission stellt eine Plattform zur Online-Streitbeilegung (OS) bereit:<br>
 <a href="https://ec.europa.eu/consumers/odr/">https://ec.europa.eu/consumers/odr/</a>.<br>
 Unsere E-Mail-Adresse finden Sie oben im Impressum.</p>
-<h2 id="verbraucherstreitbeilegunguniversalschlichtungsstelle">Verbraucherstreitbeilegung/Universalschlichtungsstelle</h2>
+<h3 id="verbraucherstreitbeilegunguniversalschlichtungsstelle">Verbraucherstreitbeilegung/Universalschlichtungsstelle</h3>
 <p>Wir sind nicht bereit oder verpflichtet, an Streitbeilegungsverfahren vor einer Verbraucherschlichtungsstelle teilzunehmen.</p>
-<h2 id="haftung-für-inhalte">Haftung für Inhalte</h2>
+<h3 id="haftung-für-inhalte">Haftung für Inhalte</h3>
 <p>Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach §§ 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen.</p>
 <p>Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt. Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich. Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.</p>
-<h2 id="haftung-für-links">Haftung für Links</h2>
+<h3 id="haftung-für-links">Haftung für Links</h3>
 <p>Unser Angebot enthält Links zu externen Webseiten Dritter, auf deren Inhalte wir keinen Einfluss haben. Deshalb können wir für diese fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich. Die verlinkten Seiten wurden zum Zeitpunkt der Verlinkung auf mögliche Rechtsverstöße überprüft. Rechtswidrige Inhalte waren zum Zeitpunkt der Verlinkung nicht erkennbar.</p>
 <p>Eine permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete Anhaltspunkte einer Rechtsverletzung nicht zumutbar. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Links umgehend entfernen.</p>
-<h2 id="urheberrecht">Urheberrecht</h2>
+<h3 id="urheberrecht">Urheberrecht</h3>
 <p>Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechtes bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers. Downloads und Kopiendieser Seite sind nur für den privaten, nicht kommerziellen Gebrauch gestattet.</p>
 <p>Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden, werden die Urheberrechte Dritter beachtet. Insbesondere werden Inhalte Dritter als solche gekennzeichnet. Sollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam werden, bitten wir um einen entsprechenden Hinweis. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte umgehend entfernen.</p>
-<h2 id="datenschutzerklärung">Datenschutzerklärung</h2>
-<h3 id="datenschutz">Datenschutz</h3>
+<h3 id="datenschutzerklärung">Datenschutzerklärung</h3>
+<h4 id="datenschutz">Datenschutz</h4>
 <p>Die Betreiber dieser Seiten nehmen den Schutz Ihrer persönlichen Daten sehr ernst. Wir behandeln Ihre personenbezogenen Daten vertraulich und entsprechend der gesetzlichen Datenschutzvorschriften sowie dieser Datenschutzerklärung.</p>
 <p>Die Nutzung unserer Webseite ist in der Regel ohne Angabe personenbezogener Daten möglich. Soweit auf unseren Seiten personenbezogene Daten (beispielsweise Name, Anschrift oder E-Mail-Adressen) erhoben werden, erfolgt dies, soweit möglich, stets auf freiwilliger Basis. Diese Daten werden ohne Ihre ausdrückliche Zustimmungnicht an Dritte weitergegeben.</p>
 <p>Wir weisen darauf hin, dass die Datenübertragung im Internet (z.B. bei der Kommunikation per E-Mail) Sicherheitslücken aufweisen kann. Ein lückenloser Schutz der Daten vor dem Zugriff durch Dritte ist nicht möglich.</p>
-<h3 id="server-log-files">Server-Log-Files</h3>
+<h4 id="server-log-files">Server-Log-Files</h4>
 <p>Der Provider der Seiten erhebt und speichert automatisch Informationen in so genannten Server-Log Files, die Ihr Browser automatisch an uns übermittelt. Dies sind:</p>
 <pre><code>Browsertyp und Browserversion
 verwendetes Betriebssystem
@@ -117,14 +133,14 @@ Hostname des zugreifenden Rechners
 Uhrzeit der Serveranfrage
 </code></pre>
 <p>Diese Daten sind nicht bestimmten Personen zuordenbar. Eine Zusammenführung dieser Daten mit anderen Datenquellen wird nicht vorgenommen. Wir behalten uns vor, diese Daten nachträglich zu prüfen, wenn uns konkrete Anhaltspunkte für eine rechtswidrige Nutzung bekannt werden.</p>
-<h3 id="kontaktformular">Kontaktformular</h3>
+<h4 id="kontaktformular">Kontaktformular</h4>
 <p>Wenn Sie uns per Kontaktformular Anfragen zukommen lassen, werden Ihre Angaben aus dem Anfrageformular inklusive der von Ihnen dort angegebenen Kontaktdaten zwecks Bearbeitung der Anfrage und für den Fall von Anschlussfragen bei uns gespeichert. Diese Daten geben wir nicht ohne Ihre Einwilligung weiter.</p>
-<h3 id="ssl--verschlüsselung">SSL- Verschlüsselung</h3>
+<h4 id="ssl--verschlüsselung">SSL- Verschlüsselung</h4>
 <p>Diese Seite nutzt aus Gründen der Sicherheit und zum Schutz der übertragung vertraulicher Inhalte, wie zum Beispiel der Anfragen, die Sie an uns als Seitenbetreiber senden, eine SSL-Verschlüsselung. Eine verschlüsselte Verbindung erkennen Sie daran, dass die Adresszeile des Browsers von „http://“ auf „https://“ wechselt und an dem Schloss-Symbol in Ihrer Browserzeile.</p>
 <p>Wenn die SSL Verschlüsselung aktiviert ist, können die Daten, die Sie an uns übermitteln, nicht von Dritten mitgelesen werden.</p>
-<h2 id="widerspruch-werbe-mails">Widerspruch Werbe-Mails</h2>
+<h3 id="widerspruch-werbe-mails">Widerspruch Werbe-Mails</h3>
 <p>Der Nutzung von im Rahmen der Impressumspflicht veröffentlichten Kontaktdaten zur übersendung von nicht ausdrücklich angeforderter Werbung und Informationsmaterialien wird hiermit widersprochen. Die Betreiber der Seiten behalten sich ausdrücklich rechtliche Schritte im Falle der unverlangten Zusendung von Werbeinformationen, etwa durch Spam-E-Mails, vor.</p>
-<p>Quellen: <a href="https://www.e-recht24.de">https://www.e-recht24.de</a> / <a href="https://www.e-recht24.de/impressum-generator.html">https://www.e-recht24.de/impressum-generator.html</a></p>
+<p>Quellen: <a href="https://www.e-recht24.de">https://www.e-recht24.de</a></p>
 
 		</div>
 	</section>
