--- a/public/en/index.html
+++ b/public/en/index.html
@@ -93,6 +93,9 @@
   
   
     <p>Qualitätsanspruch, enger Kundenkontakt und klare Dokumentation.</p>
+<p>Ich unterstütze bei individuellen AI-Lösungen, Deployment und Management<br>
+von diversen Software-Stacks, Cloud Architecture bis hin zur Optimierung.</p>
+
   
 
 
